--- a/GeoLayout/Views/MapView.xaml
+++ b/GeoLayout/Views/MapView.xaml
@@ -18,7 +18,7 @@
 
             <Style x:Key="MapToggleButton" TargetType="ToggleButton">
                 <Setter Property="Background" Value="White"/>
-                <Setter Property="Opacity" Value="0.5"/>
+                <Setter Property="Opacity" Value="0.8"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type ToggleButton}">
@@ -137,10 +137,10 @@
 
         <StackPanel Orientation="Horizontal">
             <ToggleButton Margin="6,5" IsChecked="{Binding ElementName=AddPointLayer, Path=IsActive}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource MapToggleButton}" Width="39" Height="39" ToolTip="Добавить точку">
-                <Image Source="../Images/waypoint.png" Width="28" Height="28"/>
+                <Image Source="../Images/addPoint.png" Width="28" Height="28"/>
             </ToggleButton>
             <ToggleButton Margin="6,5" IsChecked="{Binding ElementName=ShiftPointLayer, Path=IsActive}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource MapToggleButton}" Width="39" Height="39" ToolTip="Сместить точку">
-                <Image Source="../Images/waypoint.png" Width="28" Height="28"/>
+                <Image Source="../Images/shift.png" Width="28" Height="28"/>
             </ToggleButton>
             <ToggleButton Margin="6,5" IsChecked="{Binding ElementName=MultiRulerToolLayer, Path=IsActive}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource MapToggleButton}" Width="39" Height="39" ToolTip="Измерить расстояние">
                 <Image Source="../Images/ruler.png" Width="28" Height="28"/>
@@ -149,10 +149,10 @@
                 <Image Source="../Images/profile-32.png" Width="28" Height="28"/>
             </ToggleButton>
             <ToggleButton Margin="6,5" IsChecked="{Binding ElementName=RectangleToolLayer, Path=IsActive}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource MapToggleButton}" Width="39" Height="39" ToolTip="Проектировать сетку в границах параллелограмма">
-                <Image Source="../Images/grid-32.png" Width="28" Height="28"/>
+                <Image Source="../Images/parallelogram.png" Width="28" Height="28"/>
             </ToggleButton>
             <ToggleButton Margin="6,5" IsChecked="{Binding ElementName=PolygonToolLayer, Path=IsActive}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource MapToggleButton}" Width="39" Height="39" ToolTip="Проектировать сетку в границах многоугольника">
-                <Image Source="../Images/grid-32.png" Width="28" Height="28"/>
+                <Image Source="../Images/polygon.png" Width="28" Height="28"/>
             </ToggleButton>
         </StackPanel>
 
