--- a/GeoLayout/MainWindow.xaml
+++ b/GeoLayout/MainWindow.xaml
@@ -19,14 +19,37 @@
 
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             
-            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Button BorderThickness="0"  ToolTip ="Загрузить точки из файла" Background="White" Margin="3" Padding="3" HorizontalAlignment="Left" Command="{Binding OpenCommand}">
+                    <WrapPanel>
+                        <Image Source="Images/open.png" Width="20"></Image>
+                        <TextBlock FontWeight="Bold" Margin="3,3,6,3" Text="Импорт" VerticalAlignment="Center" MinWidth="10"/>
+                    </WrapPanel>
+                </Button>
+                <Button Grid.Column="1" BorderThickness="0"  ToolTip ="Сохранить точки в файл" Background="White" Margin="3" Padding="3" HorizontalAlignment="Left" Command="{Binding SaveCommand}">
+                    <WrapPanel>
+                        <Image Source="Images/save.png" Width="20"></Image>
+                        <TextBlock FontWeight="Bold" Margin="3,3,6,3" Text="Экспорт" VerticalAlignment="Center" MinWidth="10"/>
+                    </WrapPanel>
+                </Button>
+            </Grid>
+
+            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <views:GroupsView/>
             </ScrollViewer>
-            <views:SettingsView Grid.Row="1"/>
+            
+            <views:SettingsView Grid.Row="2"/>
+
         </Grid>
 
         <GridSplitter Grid.Column="1" ResizeDirection="Columns" ResizeBehavior="PreviousAndNext" Width="5"/>
