--- a/GeoLayout/MainWindow.xaml
+++ b/GeoLayout/MainWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:data="clr-namespace:GeoLayout.Domain.Data;assembly=GeoLayout.Domain"
         xmlns:views="clr-namespace:GeoLayout.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="GeoLayout" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -21,6 +21,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             
@@ -48,7 +49,9 @@
                 <views:GroupsView/>
             </ScrollViewer>
             
-            <views:SettingsView Grid.Row="2"/>
+            <views:TdmLayoutBuilderView Grid.Row="2"/>
+
+            <views:SettingsView Grid.Row="3"/>
 
         </Grid>
 
